--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>ES6</title>
 </head>
 <body>
+  <button id="novotodo">Adicionar</button>
   <script src="bundle.js"></script>
 </body>
 </html>
